# ca-demos-and-tools

./: .gitignore  README.md  ca-demos-and-tools.code-workspace
ca-agent-ops-prism/: Dockerfile  GEMINI.md  LOCAL_SETUP.md  README.md  pyproject.toml  requirements.txt
ca-agent-ops-prism/alembic/: env.py  script.py.mako
ca-agent-ops-prism/alembic/versions/: 0d306800fe55_remove_asserts_column_from_examples.py  10b0ee94ea81_add_baseline_data_match_to_.py  125b06883c8d_rename_latency_to_duration_in_.py  20067ef744e4_rename_agent_config_to_context.py  2bab71b9e3db_add_process_management_columns_to_trial.py  2ef9abb9e513_fix_state.py  3ca5b4628874_rename_latency_to_duration_and_make_.py  499b6db4e31b_update_existing_agents_to_prod.py  53caba6952b0_add_concurrency_to_run.py  5bfcd38eae39_add_timezone_to_run_and_trial_timestamps.py  6b60f6ea7e62_create_playground_traces.py  7cdc4df909dc_create_assertions_table.py  7d75673c8561_add_ai_judge_and_duration_max_ms_to_.py  827a40689071_remove_datasource_fields_from_test_suite.py  8a3312245187_sync_with_models.py  8c6080c6545f_remove_agent_env.py  a22be0585aee_add_generate_suggestions_to_run.py  a26b5bc93f48_add_looker_credentials_to_agent.py  b61defd0d9b8_add_datasource_to_suite.py  c67b9fdcae84_add_results_to_playground_traces.py  c9e86caccc40_sync_run_status_enum.py  cb607eef9ff8_add_datasource_config_to_suite.py  e4761fe3887b_add_execution_engine.py  e4c85eb95572_sync_agentenv_enum_values.py  e8fe334fbbf5_remove_calculated_columns_from_runs.py  ed2ab69fa339_remove_service_duration_ms_column.py
ca-agent-ops-prism/scripts/: export_suite.py  import_suites.py  run_app.sh  run_prod.sh  run_tests.sh  setup.sh  setup_postgres.sh  test_cloud_sql_connection.py
ca-agent-ops-prism/src/prism/: __init__.py  prod.py
ca-agent-ops-prism/src/prism.egg-info/: PKG-INFO
ca-agent-ops-prism/src/prism/client/: __init__.py  agent_client.py  comparison_client.py  dashboard_client.py  dependencies.py  playground_client.py  prism_client.py  run_client.py  suggestion_client.py  suite_client.py  system_client.py
ca-agent-ops-prism/src/prism/docs/: design_overview.md
ca-agent-ops-prism/tests/: conftest.py  test_client_di.py  test_client_isolation.py  test_common_isolation.py  test_ui_isolation.py
ca-agent-ops-prism/tests/clients/: test_gemini_data_analytics_client.py  test_gen_ai_client.py  test_vertex_ai_client.py
ca-agent-ops-prism/tests/integration/: test_e2e_run.py
ca-agent-ops-prism/tests/repositories/: test_agent_repository.py  test_example_repository.py  test_run_repository.py  test_suite_repository.py  test_trial_repository.py
ca-agent-ops-prism/tests/services/: repro_validation_error.py  test_agent_service.py  test_ai_service.py  test_archived_runs_exclusion.py  test_assert_engine.py  test_bulk_import_service.py  test_comparison_ordering.py  test_comparison_service.py  test_dashboard_service.py  test_execution_service.py  test_execution_suggestions.py  test_golden_queries.py  test_snapshot_service.py  test_suggestion_service.py  test_suite_service.py  test_sync_suite.py  test_sync_suite_ids.py  test_timeline_service.py  test_trial_reset.py  test_validation_service.py  test_worker_concurrency.py  test_worker_pool.py  test_worker_queue.py
ca-agent-ops-prism/tests/ui/: __init__.py  test_ui_smoke.py
ca-api-adk-streaming/: .env.example  README.md  deploy.sh  pyproject.toml
ca-api-adk-streaming/ca_api_agent/: __init__.py  agent.py  root_agent.py
ca-api-adk-streaming/ca_api_agent/agents/: __init__.py  ca_query.py  visualization.py
ca-api-adk-streaming/deployment/: deploy.py
ca-slack-demo/: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  pyproject.toml
ca-slack-demo/context/census/: context.json
ca-slack-demo/context/ncaa/: context.json
ca-slack-demo/context/stackoverflow/: context.json
ca-slack-demo/context/thelook/: context.json
ca-slack-demo/scratch/: test_library_rest_chat.py  test_looker_agent.py  test_parse.py  test_parsedict_null.py  test_raw_chat.py  test_sheets.py
ca-slack-demo/scripts/: deploy_cloudrun.sh  provision_agents.py  run_slack.py  smoke_test_cloudrun.py  test_cli.py
ca-slack-demo/src/: ca_client.py  config.py  mcp_server.py  web_app.py
ca-slack-demo/src/agents/: root.py
ca-slack-demo/src/charts/: renderer.py
ca-slack-demo/src/slack/: app.py  blocks.py  mention.py  progress.py
ca-slack-demo/src/static/: architecture.html  index.html
ca-slack-demo/src/tools/: ca_tools.py
ca-slack-demo/tests/: conftest.py  test_blocks.py  test_ca_client.py  test_mention.py  test_renderer.py  test_routing.py
(+337 files in other folders)
