[project]
name = "prism"
version = "0.1.0"
description = "Prism Core Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "alembic>=1.13.0",
    "absl-py>=2.0.0",
    "sqlalchemy-utils>=0.41.0",
    "google-cloud-geminidataanalytics == 0.10.0",
    "google-auth",
    "google-cloud-aiplatform",
    "google-genai",
    "google-cloud-resource-manager",
    "dash",
    "dash-mantine-components",
    "dash-iconify",
    "gunicorn",
    "dash-ace",
    "PyYAML",
    "pandas",
    "dash-vega-components",
    "fast-depends",
    "psycopg2-binary",
    "cloud-sql-python-connector[pg8000]",
    "pg8000",
    "scramp",
    "python-dotenv",
    "looker-sdk",
    "psutil",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
